sourceCompatibility = JavaVersion.VERSION_22
targetCompatibility = JavaVersion.VERSION_22

description = 'Multiffi/FFI FFM Backend'

tasks.withType(Test).configureEach {
    jvmArgs += '--enable-native-access=ALL-UNNAMED'
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += '--enable-native-access=ALL-UNNAMED'
}

dependencies {
    api project(':core')
    implementation project(':core')

    api 'org.ow2.asm:asm:9.7.1'
    implementation 'org.ow2.asm:asm:9.7.1'
}
